nickel-lang-lib/tests/integration/typecheck/fail/mismatch_contract_type.ncl
# test.type = 'error'
# eval = 'typecheck'
# 
# [test.metadata]
# error = 'TypecheckError::TypeMismatch'
#
# [test.metadata.expectation]
# expected = 'Number'
# found = 'Bool'
(101 | Bool) : Number